--- a/server/package.json
+++ b/server/package.json
@@ -23,5 +23,8 @@
     "helmet": "^4.1.1",
     "pg": "^8.4.0",
     "sequelize": "^6.3.5"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^6.2.0"
   }
 }
