--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "migrate:dev": "npx sequelize-cli db:migrate",
+    "migrate:dev:undo": "npx sequelize-cli db:migrate:undo:all"
   },
   "keywords": [
     "React",
