--- a/server/package.json
+++ b/server/package.json
@@ -22,11 +22,13 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "express": "^4.17.1",
     "express-validator": "^6.7.0",
     "helmet": "^4.1.1",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.4.16",
     "pg": "^8.4.0",
     "sequelize": "^6.3.5",
     "winston": "^3.3.3"
