--- a/instagram_clone/package.json
+++ b/instagram_clone/package.json
@@ -15,7 +15,8 @@
     "react-icons": "^3.11.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "rodal": "^1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
