--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
   "author": "Gilberto Davis",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.831.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
@@ -28,6 +29,7 @@
     "helmet": "^4.2.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "nodemailer": "^6.4.16",
     "pg": "^8.5.1",
     "sequelize": "^6.3.5",
